# DARE

./: .gitignore  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  todo.md
containers/: Cargo.toml  README.md
containers/benches/: slot_map.rs
containers/examples/: unique_slot_map_demo.rs
containers/src/: concurrent_index_allocator.rs  deferred_deletion.rs  erased_storage.rs  error.rs  free_list.rs  hashmap.rs  lib.rs  mutex_pool.rs  prelude.rs  slot.rs  sparse_slot_map.rs  traits.rs
containers/src/adt/: mod.rs
containers/src/erased_storage/: dash_map.rs  flash_map.rs  mod.rs
containers/src/slot_map/: insertion_sorted_slot_map.rs  mod.rs  slot_map.rs  unique_slot_map.rs
containers/src/virtual_containers/: hash_map.rs  mod.rs
dagal/: Cargo.toml  README.md
dagal/examples/: README.md
dagal/examples/hello_compute/: Cargo.toml  main.rs
dagal/examples/hello_swapchain/: Cargo.toml  main.rs
dagal/examples/hello_triangle/: Cargo.toml
dagal/shaders/includes/: dagal.glsl  ext.glsl
dagal/src/: context.rs  error.rs  lib.rs  prelude.rs  traits.rs
dagal/src/allocators/: arc_allocator.rs  gpu_allocator_impl.rs  memory_type.rs  mod.rs  slot_map_allocator.rs  test_allocator.rs  vk_mem_impl.rs
dagal/src/bootstrap/: app_info.rs  init.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  queue.rs  swapchain.rs
dagal/src/command/: command_buffer.rs  command_pool.rs  dynamic_render.rs  mod.rs
dagal/src/concurrency/: lockable.rs  lockable_impl.rs  mod.rs
dagal/src/core/: context.rs  instance.rs  mod.rs
dagal/src/descriptor/: descriptor_layout_builder.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  descriptor_set_layout_builder.rs  mod.rs
dagal/src/device/: debug_utils.rs  execution_manager.rs  logical_device.rs  mod.rs  physical_device.rs  queue.rs  queue_registry.rs
dagal/src/graph/: adj_matrix.rs  graph.rs  graphics_pass.rs  mod.rs  pass.rs  render_pass.rs  task_graph_edge.rs  vertices.rs  virtual_resource.rs
dagal/src/pipelines/: compute.rs  dynamic_rendering.rs  graphics.rs  mod.rs  pipeline_layout.rs  pipeline_layout_builder.rs  traits.rs
dagal/src/prelude/: concurrency.rs  device.rs  mod.rs  util.rs
dagal/src/render_graph/: compiled_graph.rs  error.rs  graph.rs  mod.rs  virtual_resource.rs
dagal/src/resource/: buffer.rs  image.rs  image_view.rs  mod.rs  sampler.rs  suballocated_buffer.rs  test.rs  texture.rs  traits.rs  typed_buffer.rs  typed_buffer_view.rs
dagal/src/shader/: glsl_preprocessor.rs  mod.rs  shader.rs  shaderc_impl.rs  slang_impl.rs  traits.rs
dagal/src/sync/: binary_semaphore.rs  fence.rs  memory_barrier.rs  mod.rs  semaphore.rs  submit_batch.rs  traits.rs
dagal/src/util/: align.rs  deletion_stack.rs  format.rs  free_list_allocator.rs  immediate_submit.rs  mod.rs  queue_allocator.rs  slot_map.rs  tests.rs  traits.rs
dagal/src/virtual_resource/: mod.rs
dagal/src/wsi/: mod.rs  surface.rs  swapchain.rs  traits.rs
dare/: Cargo.toml  README.md
dare/shaders/: bindless.glsl  bindless.slang  colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  compile.ps1  constants.glsl  cull.slang  gpu_rendering.slang  gradient.comp  inversion.comp  material.glsl  material.slang  material_mesh.frag  material_mesh.vert  mesh.frag  mesh.slang  mesh.vert  random.slang  rustify.slang  scene_data.glsl  scene_data.slang  solid.slang  surface.glsl  surface.slang  surface_bit_flags.glsl  tex_image.frag  texture.slang
dare/shaders/raster/: push_constants.glsl
dare/src/: app.rs  init_assets.rs  main.rs  primitives.rs  ray_tracing.rs  slot_map.rs  traits.rs
dare/src/asset/: asset.rs  buffer.rs  error.rs  format.rs  gltf.rs  handle.rs  image.rs  image_view.rs  manager.rs  material.rs  metadata_location.rs  mod.rs  pool.rs  prelude.rs  sampler.rs  storage.rs  surface.rs  texture.rs
dare/src/asset2/: asset_id.rs  asset_state.rs  gltf.rs  handle.rs  handle_allocator.rs  mod.rs  traits.rs
dare/src/asset_system/: format.rs  geometry.rs  handle.rs  mesh.rs  mod.rs  stream.rs
dare/src/assets/: asset_context.rs  draw_context.rs  gltf_loader.rs  mesh.rs  mod.rs  node.rs  render_object.rs  scene.rs  scene_data.rs
dare/src/concurrent/: mod.rs  tokio.rs
dare/src/engine/: init_assets.rs  label.rs  material.rs  mesh.rs  mod.rs  prelude.rs
dare/src/physical_resource/: client.rs  handle.rs  mod.rs  server.rs  traits.rs
dare/src/physics/: mod.rs  transform.rs  velocity.rs
dare/src/prelude/: mod.rs  util.rs
dare/src/render/: README.md  acceleration_structure.rs  backable.rs  backed_growable.rs  camera.rs  deferred_deletion.rs  double_buffering.rs  draw_context.rs  frame.rs  gpu_resource.rs  growable_buffer.rs  image.rs  material.rs  mesh.rs  mesh2.rs  mesh_render_system.rs  mod.rs  pipeline.rs  present_system.rs  push_constants.rs  scene_data.rs  surface.rs  texture.rs  transfer.rs
dare/src/render/c/: mod.rs  (+1 more)
dare/src/render2/: README.md  frame.rs  frame_number.rs  mesh.rs  mesh_render_system.rs  mod.rs  present_system.rs  render_context.rs  resource_relationship.rs  surface_context.rs  transfer_belt.rs  window_context.rs
dare/src/util/: delta.rs  either.rs  entity_linker.rs  event.rs  gpu_resource_table.rs  index_map.rs  mod.rs  plugin.rs  server.rs  world.rs
dare/src/window/: input.rs  mod.rs
dare_assets/: Cargo.toml  README.md
dare_assets/src/: asset_manager.rs  assets.rs  buffer.rs  chunk_desc.rs  format.rs  frame.rs  geometry.rs  gltf.rs  handles.rs  lib.rs  mesh.rs  stream_state.rs  unit_stream.rs
dare_engine/: Cargo.toml
dare_engine/src/: lib.rs  server.rs
dare_engine/src/components/: camera.rs
dare_engine/src/plugin/: mod.rs
dare_engine/src/systems/: cull.rs  input.rs  mod.rs
dare_render/: Cargo.toml  README.md
dare_render/src/: frame.rs  lib.rs  snapshot.rs  sync_world.rs  timer.rs  transfer_belt.rs
dare_render/src/components/: camera.rs  mod.rs
dare_render/src/contexts/: core.rs  gpu.rs  mod.rs  present.rs  swapchain.rs  test_context.rs
dare_window/: Cargo.toml
dare_window/src/: input.rs  input_log.rs  lib.rs  messages.rs  window.rs  winit_app.rs
(+243 files in other folders)
