[workspace]
members = [
  "dagal",
  "dare",
  "dare_engine",
  "macros",
  "containers",
  "dare_assets",
  "dare_physics",
  "dare_render",
  "dare_window",
  "dare_util",
  "dare_ecs",
]

resolver = "3"

[workspace.dependencies]
tokio = { version = "1.52.3", features = [
  "sync",
  "rt",
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
] }
glam = "0.33.2"
bevy_ecs = { version = "0.19.0", features = ["default", "multi_threaded", "debug"] }
futures = "0.3.32"
futures-util = "0.3.32"
crossbeam-channel = "0.5.16"
tracing = "0.1.44"
anyhow = "1.0.103"
thiserror = "2.0.18"
tracy-client = "0.18.4"
bytemuck = "1.25.0"
derivative = "2.2.0"
gltf = { version = "1.4.1", features = ["KHR_lights_punctual"] }
reqwest = { version = "0.13.4", features = ["stream"] }
smol = { version = "2.0.2" }