[package]
name = "dare_containers"
version = "0.1.0"
edition = "2021"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
anyhow = "1.0.86"
thiserror = "2.0.12"
dashmap = { version = "6.0.1" }
derivative = "2.2.0"
flashmap = "0.1.0"
tokio = "1.40.0"
crossbeam-channel = "0.5.13"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"]}

[[bench]]
name = "slot_map"
harness = false