[package]
name = "dare_containers"
version = "0.1.0"
edition = "2021"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
dashmap = { version = "6.1.0" }
derivative = "2.2.0"
tokio = "1.48.0"
crossbeam-channel = "0.5.15"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"]}

[[bench]]
name = "slot_map"
harness = false