[package]
name = "dare_containers"
version = "0.1.0"
edition = "2021"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { version = "6.1.0" }
derivative = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"]}

[[bench]]
name = "slot_map"
harness = false