[package]
name = "dagal"
version = "0.1.0"
edition = "2021"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
ash = "0.38.0"
ash-window = { version = "0.13.0", optional = false }
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator.git", branch = "ash-0.38", features = ["default", "vulkan"], optional = true }
winit = { version = "0.30.5", optional = true }
raw-window-handle = { version = "0.6.2", optional = false }
vk-mem = { version = "0.4.0", optional = true }
tokio = { version = "1.40.1", features = ["macros"], optional = true }
futures = { version = "0.3.31", optional = true }
async-std = { version = "1.13.0", optional = true }
derivative = "2.2.0"
anyhow = "1.0.93"
thiserror = "1.0.65"
tracing = "0.1.40"

# Shader dependencies
shaderc = { version = "0.8.3", optional = true }
glam = "0.29.0"
log = "0.4.22"
petgraph = "0.7.0"
crossbeam-channel = "0.5.14"

[dev-dependencies]
winit = { version = "0.30.0", optional = false }

[features]
default = ["bootstrap", "winit", "gpu-allocator", "vk-mem-rs", "shaderc", "raii"]
# Adds support for window into dagal
winit = ["dep:winit"]
# Adds support for gpu-allocator for the primary allocation
gpu-allocator = ["dep:gpu-allocator"]
# Adds support for vk-mem-rs for the primary allocation
vk-mem-rs = ["dep:vk-mem"]
# Whether to log the lifetime of objects
log-lifetimes = []
# Whether to log memory allocation lifetimes
log-memory-allocations = []
# Adds support for shaderc
shaderc = ["dep:shaderc"]
# Whether the bootstrap module should be enabled
bootstrap = []
# Whether resources should be automatically cleaned up
raii = []
# Enables concurrency features
concurrent = []
tokio = ["dep:tokio", "concurrent"]
futures = ["dep:futures", "concurrent"]
async-std = ["dep:async-std", "concurrent"]
