[package]
name = "dagal"
version = "0.1.0"
edition = "2021"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
ash = "0.38.0"
ash-window = { version = "0.13.0", optional = false }
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator.git", version = "0.28.0", features = [
  "default",
  "vulkan",
], optional = true }
winit = { version = "0.30.13", features = ["rwh_06"], optional = true }
raw-window-handle = { version = "0.6.2", optional = false }
vk-mem = { version = "0.5.0", optional = true }
derivative = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
petgraph = "0.8.2"
shaderc = { version = "0.10.1", optional = true }
glam = { workspace = true }
log = "0.4.30"


[features]
default = [
  "bootstrap",
  "winit",
  "gpu-allocator",
  "vk-mem-rs",
  "shaderc",
  "raii",
]
# Adds support for window into dagal
winit = ["dep:winit"]
# Adds support for gpu-allocator for the primary allocation
gpu-allocator = ["dep:gpu-allocator"]
# Adds support for vk-mem-rs for the primary allocation
vk-mem-rs = ["dep:vk-mem"]
# Whether to log the lifetime of objects
log-lifetimes = []
# Whether to log memory allocation lifetimes
log-memory-allocations = []
# Adds support for shaderc
shaderc = ["dep:shaderc"]
# Whether the bootstrap module should be enabled
bootstrap = []
# Whether resources should be automatically cleaned up
raii = []
