[package]
name = "dare"
version = "0.1.0"
edition = "2024"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
dagal = { path = "../dagal", features = ["winit", "bootstrap", "gpu-allocator", "log-memory-allocations", "shaderc", "tokio"] }
tracing = { workspace = true }
tracing-subscriber = "0.3.22"
glam = { workspace = true }
gltf = { workspace = true }
bytemuck = { workspace = true }
bitflags = "2.10.0"
image = "0.25.9"
tokio = { workspace = true }
derivative = { workspace = true }
bevy_ecs = { workspace = true }
dare_containers = { path = "../containers" }
dare_assets = { path = "../dare_assets" }
dare_engine = { path = "../dare_engine" }
dare_physics = { path = "../dare_physics" }
dare_render = { path = "../dare_render" }
dare_window = { path = "../dare_window" }
futures = { workspace = true }
crossbeam-channel = { workspace = true }
num-traits = "0.2.19"
tracy-client = { workspace = true }
bytes = "1.11.0"
dare_util = { path = "../dare_util" }
rfd = "0.17.2"
#tracing-tracy = {version = "0.11.4", features = ["enable"]}
#slang = { git = "https://github.com/ProjectKML/slang-rs.git" }

[dev-dependencies]
rand = "0.9.2"

[features]
# Tracing
tracing = []
