[package]
name = "dare"
version = "0.1.0"
edition = "2024"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
dare_assets = { path = "../dare_assets" }
dare_engine = { path = "../dare_engine" }
dare_render = { path = "../dare_render" }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23" }
tracy-client = { workspace = true }

[features]
tracing = []
