[package]
name = "dare_assets"
version = "0.1.0"
edition = "2024"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
bevy_ecs = { version = "0.17.3", features = ["default", "multi_threaded"] }
tracing = "0.1.43"
glam = "0.30.9"
gltf = { version = "1.4.1", features = ["KHR_lights_punctual"] }
dare_containers = { path = "../containers" }
dare_physics = { path = "../dare_physics" }
futures-util = "0.3.31"
bytemuck = "1.24.0"
