[package]
name = "dare_assets"
version = "0.1.0"
edition = "2024"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
bevy_ecs = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
gltf = { workspace = true }
dare_containers = { path = "../containers" }
dare_physics = { path = "../dare_physics" }
futures-util = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
