[package]
name = "dare_assets"
version = "0.1.0"
edition = "2024"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
futures = { workspace = true }
smol = { workspace = true }
bevy_ecs = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
gltf = { workspace = true }
dare_containers = { path = "../containers" }
dare_physics = { path = "../dare_physics" }
dare_ecs = { path = "../dare_ecs" }
futures-util = { workspace = true }
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
ureq = { workspace = true }
anyhow = { workspace = true }
dagal = { path = "../dagal" }
