[package]
name = "dare_engine"
version = "0.1.0"
edition = "2024"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
anyhow = "1.0.100"
bevy_ecs = { version = "0.17.3", features = ["default", "multi_threaded"] }
tokio = { version = "1.48.0", features = ["sync"] }
tracing = "0.1.43"
dare_assets = { path = "../dare_assets" }
dare_physics = { path = "../dare_physics" }
rayon = "1.11.0"
glam = "0.30.9"
