[package]
name = "dare_engine"
version = "0.1.0"
edition = "2024"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
anyhow = { workspace = true }
bevy_ecs = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
dare_assets = { path = "../dare_assets" }
dare_physics = { path = "../dare_physics" }
dare_ecs = { path = "../dare_ecs" }
rayon = "1.11.0"
glam = { workspace = true }
