[package]
name = "dare_engine"
version = "0.1.0"
edition = "2024"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
bevy_ecs = { workspace = true }
tracing = { workspace = true }
dare_assets = { path = "../dare_assets" }
dare_physics = { path = "../dare_physics" }
dare_ecs = { path = "../dare_ecs" }
dagal = { path = "../dagal", features = ["winit"] }
dare_window = { path = "../dare_window" }
rfd = "0.17.2"
rayon = "1.11.0"
glam = { workspace = true }
