[package]
name = "dare_render"
version = "0.1.0"
edition = "2024"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
bevy_ecs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
tokio = { workspace = true }
dagal = { path = "../dagal" }
gltf = { workspace = true }
dare_containers = { path = "../containers" }
dare_physics = { path = "../dare_physics" }
dare_window = { path = "../dare_window" }
dare_assets = { path = "../dare_assets" }
tracy-client = { workspace = true }
dare_util = { path = "../dare_util" }