[package]
name = "dare_window"
version = "0.1.0"
edition = "2024"
authors = ["Danny Le <git@dannydoes.graphics>"]

[dependencies]
dagal = { path = "../dagal", features = ["winit"] }
dare_ecs = { path = "../dare_ecs" }
glam = { workspace = true }
bevy_ecs = { workspace = true }
tracing = { workspace = true }